cambios realizados container

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         </ul>
     </h1>
     <h1>App Movil</h1>
+    <!--Div contendedor 1-->
+    <div class="container">
+        <p>Este es el contendio para la explicacion acerca del app movil del acueducto</p>
+    </div>
     <h1>Innovación</h1>
 </body>
 </html>
