Nuevo cambio de container

--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
         <p>Este es el contendio para la explicacion acerca del app movil del acueducto</p>
     </div>
     <h1>Innovación</h1>
+    <!--Div contendedor 2-->
+    <div class="container">
+        <p>Este es el contendio para la explicacion acerca de las innovaciones de esta pagina</p>
+    </div>
 </body>
 </html>
