agregado de cotainer final

--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
     <div class="container">
         <p>Este es el contendio para la explicacion acerca de las innovaciones de esta pagina</p>
     </div>
+    <h1>Información</h1>
+    <!--Div contendedor 3-->
+    <div class="container">
+        <p>Este es el contendio final de la pagina</p>
+    </div>
 </body>
 </html>
